--- a/airship-treasuremap/site/airship-seaworthy/software/charts/ucp/promenade/promenade.yaml
+++ b/airship-treasuremap/site/airship-seaworthy/software/charts/ucp/promenade/promenade.yaml
@@ -11,7 +11,7 @@ metadata:
     parentSelector:
       name: ucp-promenade
   name: ucp-promenade
-  namespace: boggus
+  namespace: ucp
 spec:
   values:
     pod:
