--- a/airship-treasuremap/site/airskiff/software/charts/osh/openstack-glance/glance.yaml
+++ b/airship-treasuremap/site/airskiff/software/charts/osh/openstack-glance/glance.yaml
@@ -16,7 +16,7 @@ metadata:
       component: glance
       name: glance
   name: glance
-  namespace: boggus
+  namespace: osh
 spec:
   test:
     enabled: false
