--- a/airship-treasuremap/site/airskiff/software/charts/osh/openstack-glance/rabbitmq.yaml
+++ b/airship-treasuremap/site/airskiff/software/charts/osh/openstack-glance/rabbitmq.yaml
@@ -14,7 +14,7 @@ metadata:
       component: glance
       name: glance-rabbitmq
   name: glance-rabbitmq
-  namespace: boggus
+  namespace: osh
 spec:
   test:
     enabled: false
