--- a/airship-treasuremap/type/sloop/charts/osh-infra/elasticsearch.yaml
+++ b/airship-treasuremap/type/sloop/charts/osh-infra/elasticsearch.yaml
@@ -11,7 +11,7 @@ metadata:
     parentSelector:
       hosttype: elasticsearch
   name: elasticsearch
-  namespace: boggus
+  namespace: osh-infra
 spec:
   values:
     conf:
