--- a/airship-treasuremap/type/sloop/charts/osh-infra/fluent-logging.yaml
+++ b/airship-treasuremap/type/sloop/charts/osh-infra/fluent-logging.yaml
@@ -11,7 +11,7 @@ metadata:
     parentSelector:
       hosttype: fluent-logging
   name: fluent-logging
-  namespace: boggus
+  namespace: osh-infra
 spec:
   values:
     pod:
