--- a/airship-treasuremap/type/sloop/charts/osh-infra/grafana.yaml
+++ b/airship-treasuremap/type/sloop/charts/osh-infra/grafana.yaml
@@ -11,7 +11,7 @@ metadata:
     parentSelector:
       name: grafana
   name: grafana
-  namespace: boggus
+  namespace: osh-infra
   replacement: true
 spec:
   values:
