--- a/airship-treasuremap/type/sloop/charts/osh-infra/ingress.yaml
+++ b/airship-treasuremap/type/sloop/charts/osh-infra/ingress.yaml
@@ -11,7 +11,7 @@ metadata:
     parentSelector:
       name: osh-infra-ingress-controller
   name: osh-infra-ingress-controller
-  namespace: boggus
+  namespace: osh-infra
   replacement: true
 spec:
   values:
