--- a/airship-treasuremap/type/sloop/charts/osh-infra/mariadb.yaml
+++ b/airship-treasuremap/type/sloop/charts/osh-infra/mariadb.yaml
@@ -11,7 +11,7 @@ metadata:
     parentSelector:
       name: osh-infra-mariadb
   name: osh-infra-mariadb
-  namespace: boggus
+  namespace: osh-infra
   replacement: true
 spec:
   values:
