--- a/airship-treasuremap/type/sloop/charts/osh-infra/prometheus.yaml
+++ b/airship-treasuremap/type/sloop/charts/osh-infra/prometheus.yaml
@@ -11,7 +11,7 @@ metadata:
     parentSelector:
       name: prometheus
   name: prometheus
-  namespace: boggus
+  namespace: osh-infra
   replacement: true
 spec:
   values:
