--- a/airship-treasuremap/type/sloop/charts/ucp/ceph/ceph-ingress.yaml
+++ b/airship-treasuremap/type/sloop/charts/ucp/ceph/ceph-ingress.yaml
@@ -11,7 +11,7 @@ metadata:
     parentSelector:
       name: ucp-ceph-ingress
   name: ucp-ceph-ingress
-  namespace: boggus
+  namespace: ucp
   replacement: true
 spec:
   values:
