--- a/airship-treasuremap/type/sloop/charts/ucp/comps/armada.yaml
+++ b/airship-treasuremap/type/sloop/charts/ucp/comps/armada.yaml
@@ -11,7 +11,7 @@ metadata:
     parentSelector:
       name: ucp-armada
   name: ucp-armada
-  namespace: boggus
+  namespace: ucp
   replacement: true
 spec:
   values:
