--- a/airship-treasuremap/type/sloop/charts/ucp/comps/barbican.yaml
+++ b/airship-treasuremap/type/sloop/charts/ucp/comps/barbican.yaml
@@ -11,7 +11,7 @@ metadata:
     parentSelector:
       name: ucp-barbican
   name: ucp-barbican
-  namespace: boggus
+  namespace: ucp
   replacement: true
 spec:
   values:
