--- a/airship-treasuremap/type/sloop/charts/ucp/comps/drydock.yaml
+++ b/airship-treasuremap/type/sloop/charts/ucp/comps/drydock.yaml
@@ -11,7 +11,7 @@ metadata:
     parentSelector:
       name: ucp-drydock
   name: ucp-drydock
-  namespace: boggus
+  namespace: ucp
   replacement: true
 spec:
   values:
