--- a/airship-treasuremap/type/sloop/charts/ucp/comps/keystone.yaml
+++ b/airship-treasuremap/type/sloop/charts/ucp/comps/keystone.yaml
@@ -11,7 +11,7 @@ metadata:
     parentSelector:
       name: ucp-keystone
   name: ucp-keystone
-  namespace: boggus
+  namespace: ucp
   replacement: true
 spec:
   values:
