--- a/airship-treasuremap/type/sloop/charts/ucp/core/mariadb.yaml
+++ b/airship-treasuremap/type/sloop/charts/ucp/core/mariadb.yaml
@@ -11,7 +11,7 @@ metadata:
     parentSelector:
       name: ucp-mariadb
   name: ucp-mariadb
-  namespace: boggus
+  namespace: ucp
   replacement: true
 spec:
   values:
