--- a/airship-treasuremap/type/sloop/charts/ucp/core/rabbitmq.yaml
+++ b/airship-treasuremap/type/sloop/charts/ucp/core/rabbitmq.yaml
@@ -11,7 +11,7 @@ metadata:
     parentSelector:
       name: ucp-rabbitmq
   name: ucp-rabbitmq
-  namespace: boggus
+  namespace: ucp
   replacement: true
 spec:
   values:
