--- a/airship-treasuremap/site/airskiff/software/charts/osh-infra/osh-infra-logging/elasticsearch.yaml
+++ b/airship-treasuremap/site/airskiff/software/charts/osh-infra/osh-infra-logging/elasticsearch.yaml
@@ -11,5 +11,5 @@ metadata:
     parentSelector:
       hosttype: elasticsearch
   name: elasticsearch
-  namespace: boggus
+  namespace: osh-infra
 spec: {}
