--- a/airship-treasuremap/site/airskiff/software/charts/osh-infra/osh-infra-logging/fluent-logging.yaml
+++ b/airship-treasuremap/site/airskiff/software/charts/osh-infra/osh-infra-logging/fluent-logging.yaml
@@ -11,5 +11,5 @@ metadata:
     parentSelector:
       hosttype: fluent-logging
   name: fluent-logging
-  namespace: boggus
+  namespace: osh-infra
 spec: {}
