--- a/airship-treasuremap/site/airskiff/software/charts/ucp/ceph/ceph-client-update.yaml
+++ b/airship-treasuremap/site/airskiff/software/charts/ucp/ceph/ceph-client-update.yaml
@@ -11,7 +11,7 @@ metadata:
     parentSelector:
       name: ucp-ceph-client-update
   name: ucp-ceph-client-update
-  namespace: boggus
+  namespace: ucp
 spec:
   values:
     conf:
