--- a/airship-treasuremap/site/airskiff/software/charts/ucp/ceph/ceph-osd.yaml
+++ b/airship-treasuremap/site/airskiff/software/charts/ucp/ceph/ceph-osd.yaml
@@ -13,7 +13,7 @@ metadata:
     parentSelector:
       name: ucp-ceph-osd
   name: ucp-ceph-osd
-  namespace: boggus
+  namespace: ucp
 spec:
   values:
     conf:
