--- a/airship-treasuremap/site/airsloop/software/charts/kubernetes/container-networking/etcd.yaml
+++ b/airship-treasuremap/site/airsloop/software/charts/kubernetes/container-networking/etcd.yaml
@@ -11,7 +11,7 @@ metadata:
     parentSelector:
       name: kubernetes-calico-etcd
   name: kubernetes-calico-etcd
-  namespace: boggus
+  namespace: kube-system
 spec:
   values:
     nodes:
