--- a/airship-treasuremap/site/airsloop/software/charts/kubernetes/etcd/etcd.yaml
+++ b/airship-treasuremap/site/airsloop/software/charts/kubernetes/etcd/etcd.yaml
@@ -11,7 +11,7 @@ metadata:
     parentSelector:
       name: kubernetes-etcd
   name: kubernetes-etcd
-  namespace: boggus
+  namespace: kube-system
 spec:
   values:
     nodes:
