--- a/airship-treasuremap/site/airsloop/software/charts/osh/ceph/ceph-client.yaml
+++ b/airship-treasuremap/site/airsloop/software/charts/osh/ceph/ceph-client.yaml
@@ -11,7 +11,7 @@ metadata:
     parentSelector:
       name: tenant-ceph-client-type
   name: tenant-ceph-client
-  namespace: boggus
+  namespace: osh
   replacement: true
 spec:
   values:
