--- a/airship-treasuremap/site/airsloop/software/charts/ucp/divingbell.yaml
+++ b/airship-treasuremap/site/airsloop/software/charts/ucp/divingbell.yaml
@@ -13,7 +13,7 @@ metadata:
     parentSelector:
       name: ucp-divingbell
   name: ucp-divingbell
-  namespace: boggus
+  namespace: ucp
 spec:
   values:
     conf:
