--- a/airship-treasuremap/type/sloop/charts/kubernetes/ingress/ingress.yaml
+++ b/airship-treasuremap/type/sloop/charts/kubernetes/ingress/ingress.yaml
@@ -11,5 +11,5 @@ metadata:
     parentSelector:
       ingress: kube-system
   name: ingress-kube-system
-  namespace: boggus
+  namespace: kube-system
 spec: {}
