--- a/airship-treasuremap/type/sloop/charts/osh/ceph/ceph-osd.yaml
+++ b/airship-treasuremap/type/sloop/charts/osh/ceph/ceph-osd.yaml
@@ -11,5 +11,5 @@ metadata:
     parentSelector:
       name: tenant-ceph-osd
   name: tenant-ceph-osd
-  namespace: boggus
+  namespace: osh
 spec: {}
