--- a/airship-treasuremap/type/sloop/charts/osh/comps/heat-rabbitmq.yaml
+++ b/airship-treasuremap/type/sloop/charts/osh/comps/heat-rabbitmq.yaml
@@ -11,7 +11,7 @@ metadata:
     parentSelector:
       name: heat-rabbitmq
   name: heat-rabbitmq
-  namespace: boggus
+  namespace: osh
   replacement: true
 spec:
   values:
