--- a/airship-treasuremap/type/sloop/charts/osh/comps/heat.yaml
+++ b/airship-treasuremap/type/sloop/charts/osh/comps/heat.yaml
@@ -11,7 +11,7 @@ metadata:
     parentSelector:
       name: heat
   name: heat
-  namespace: boggus
+  namespace: osh
   replacement: true
 spec:
   values:
