--- a/airship-treasuremap/type/sloop/charts/osh/comps/horizon.yaml
+++ b/airship-treasuremap/type/sloop/charts/osh/comps/horizon.yaml
@@ -11,7 +11,7 @@ metadata:
     parentSelector:
       name: horizon
   name: horizon
-  namespace: boggus
+  namespace: osh
   replacement: true
 spec:
   values:
