--- a/airship-treasuremap/type/sloop/charts/ucp/ceph/ceph-client.yaml
+++ b/airship-treasuremap/type/sloop/charts/ucp/ceph/ceph-client.yaml
@@ -11,7 +11,7 @@ metadata:
     parentSelector:
       name: ucp-ceph-client
   name: ucp-ceph-client
-  namespace: boggus
+  namespace: ucp
 spec:
   values:
     conf:
