--- a/airship-treasuremap/type/sloop/charts/ucp/comps/deckhand.yaml
+++ b/airship-treasuremap/type/sloop/charts/ucp/comps/deckhand.yaml
@@ -11,7 +11,7 @@ metadata:
     parentSelector:
       name: ucp-deckhand
   name: ucp-deckhand
-  namespace: boggus
+  namespace: ucp
   replacement: true
 spec:
   values:
