--- a/airship-treasuremap/type/sloop/charts/ucp/comps/maas.yaml
+++ b/airship-treasuremap/type/sloop/charts/ucp/comps/maas.yaml
@@ -11,7 +11,7 @@ metadata:
     parentSelector:
       name: ucp-maas
   name: ucp-maas
-  namespace: boggus
+  namespace: ucp
 spec:
   values:
     conf:
