--- a/airship-treasuremap/type/sloop/charts/ucp/comps/promenade.yaml
+++ b/airship-treasuremap/type/sloop/charts/ucp/comps/promenade.yaml
@@ -11,7 +11,7 @@ metadata:
     parentSelector:
       name: ucp-promenade
   name: ucp-promenade
-  namespace: boggus
+  namespace: ucp
 spec:
   values:
     pod:
