--- a/airship-treasuremap/type/sloop/charts/ucp/comps/shipyard.yaml
+++ b/airship-treasuremap/type/sloop/charts/ucp/comps/shipyard.yaml
@@ -11,7 +11,7 @@ metadata:
     parentSelector:
       name: ucp-shipyard
   name: ucp-shipyard
-  namespace: boggus
+  namespace: ucp
   replacement: true
 spec:
   values:
