--- a/airship-treasuremap/global/software/charts/osh/openstack-horizon/horizon.yaml
+++ b/airship-treasuremap/global/software/charts/osh/openstack-horizon/horizon.yaml
@@ -47,8 +47,9 @@ spec:
     images:
       tags: $(PeglegSoftwareVersions.software-versions.spec.images.osh.horizon)
     labels:
-      node_selector_key: openstack-control-plane
-      node_selector_value: enabled
+      todojeb:
+        node_selector_key: openstack-control-plane
+        node_selector_value: enabled
     pod:
       replicas:
         server: 2
