--- a/airship-treasuremap/site/airskiff/software/charts/osh/openstack-compute-kit/libvirt.yaml
+++ b/airship-treasuremap/site/airskiff/software/charts/osh/openstack-compute-kit/libvirt.yaml
@@ -12,7 +12,7 @@ metadata:
       component: libvirt
       name: libvirt
   name: libvirt
-  namespace: osh
+  namespace: openstack
 spec:
   values:
     conf:
