--- a/airship-treasuremap/site/airskiff/software/charts/osh/openstack-compute-kit/neutron.yaml
+++ b/airship-treasuremap/site/airskiff/software/charts/osh/openstack-compute-kit/neutron.yaml
@@ -20,7 +20,7 @@ metadata:
       component: neutron
       name: neutron
   name: neutron
-  namespace: osh
+  namespace: openstack
 spec:
   values:
     conf:
