--- a/airship-treasuremap/site/airskiff/software/charts/osh/openstack-compute-kit/nova-rabbitmq.yaml
+++ b/airship-treasuremap/site/airskiff/software/charts/osh/openstack-compute-kit/nova-rabbitmq.yaml
@@ -14,7 +14,7 @@ metadata:
       component: nova
       name: nova-rabbitmq
   name: nova-rabbitmq
-  namespace: osh
+  namespace: openstack
 spec:
   test:
     enabled: false
