--- a/airship-treasuremap/site/airskiff/software/charts/osh/openstack-heat/rabbitmq.yaml
+++ b/airship-treasuremap/site/airskiff/software/charts/osh/openstack-heat/rabbitmq.yaml
@@ -14,7 +14,7 @@ metadata:
       component: heat
       name: heat-rabbitmq
   name: heat-rabbitmq
-  namespace: osh
+  namespace: openstack
 spec:
   test:
     enabled: false
