--- a/airship-treasuremap/type/sloop/charts/osh/comps/cinder.yaml
+++ b/airship-treasuremap/type/sloop/charts/osh/comps/cinder.yaml
@@ -11,7 +11,7 @@ metadata:
     parentSelector:
       name: cinder
   name: cinder
-  namespace: osh
+  namespace: openstack
   replacement: true
 spec:
   values:
