--- a/airship-treasuremap/type/sloop/charts/osh/comps/glance.yaml
+++ b/airship-treasuremap/type/sloop/charts/osh/comps/glance.yaml
@@ -11,7 +11,7 @@ metadata:
     parentSelector:
       name: glance
   name: glance
-  namespace: osh
+  namespace: openstack
   replacement: true
 spec:
   values:
