--- a/airship-treasuremap/type/sloop/charts/osh/comps/ingress.yaml
+++ b/airship-treasuremap/type/sloop/charts/osh/comps/ingress.yaml
@@ -11,7 +11,7 @@ metadata:
     parentSelector:
       name: openstack-ingress-controller
   name: openstack-ingress-controller
-  namespace: osh
+  namespace: openstack
   replacement: true
 spec:
   values:
