--- a/airship-treasuremap/type/sloop/charts/osh/comps/keystone-rabbitmq.yaml
+++ b/airship-treasuremap/type/sloop/charts/osh/comps/keystone-rabbitmq.yaml
@@ -11,7 +11,7 @@ metadata:
     parentSelector:
       name: keystone-rabbitmq
   name: keystone-rabbitmq
-  namespace: osh
+  namespace: openstack
   replacement: true
 spec:
   values:
