--- a/airship-treasuremap/type/sloop/charts/osh/comps/keystone.yaml
+++ b/airship-treasuremap/type/sloop/charts/osh/comps/keystone.yaml
@@ -11,7 +11,7 @@ metadata:
     parentSelector:
       name: keystone
   name: keystone
-  namespace: osh
+  namespace: openstack
   replacement: true
 spec:
   values:
