--- a/airship-treasuremap/global/schemas/armada/Manifest/v1.yaml
+++ b/airship-treasuremap/global/schemas/armada/Manifest/v1.yaml
@@ -1,11 +1,11 @@
 ---
-apiVersion: deckhand.airshipit.org/v1alpha1
-kind: DeckhandDataSchema
+schema: 'deckhand/DataSchema/v1'
 metadata:
-  name: armada/Manifest
+  schema: metadata/Control/v1
+  name: armada/Manifest/v1
   labels:
     application: armada
-spec:
+data:
   $schema: 'http://json-schema.org/schema#'
   type: 'object'
   additionalProperties: true
