--- a/airship-treasuremap/global/schemas/pegleg/EndpointCatalogue/v1.yaml
+++ b/airship-treasuremap/global/schemas/pegleg/EndpointCatalogue/v1.yaml
@@ -1,9 +1,9 @@
 ---
-apiVersion: deckhand.airshipit.org/v1alpha1
-kind: DeckhandDataSchema
+schema: 'deckhand/DataSchema/v1'
 metadata:
-  name: pegleg/EndpointCatalogue
-spec:
+  schema: metadata/Control/v1
+  name: pegleg/EndpointCatalogue/v1
+data:
   $schema: 'http://json-schema.org/schema#'
   type: 'object'
   # Namespace the list of endpoints
