--- a/airship-treasuremap/global/schemas/promenade/Genesis/v1.yaml
+++ b/airship-treasuremap/global/schemas/promenade/Genesis/v1.yaml
@@ -1,11 +1,11 @@
 ---
-apiVersion: deckhand.airshipit.org/v1alpha1
-kind: DeckhandDataSchema
+schema: deckhand/DataSchema/v1
 metadata:
-  name: promenade/Genesis
+  schema: metadata/Control/v1
+  name: promenade/Genesis/v1
   labels:
     application: promenade
-spec:
+data:
   $schema: http://json-schema.org/schema#
   definitions:
     abs_path:
