--- a/airship-treasuremap/global/schemas/promenade/Kubelet/v1.yaml
+++ b/airship-treasuremap/global/schemas/promenade/Kubelet/v1.yaml
@@ -1,11 +1,11 @@
 ---
-apiVersion: deckhand.airshipit.org/v1alpha1
-kind: DeckhandDataSchema
+schema: deckhand/DataSchema/v1
 metadata:
-  name: promenade/Kubelet
+  schema: metadata/Control/v1
+  name: promenade/Kubelet/v1
   labels:
     application: promenade
-spec:
+data:
   $schema: http://json-schema.org/schema#
   type: object
   definitions:
