--- a/airship-treasuremap/global/schemas/promenade/PKICatalog/PKICatalog.yaml
+++ b/airship-treasuremap/global/schemas/promenade/PKICatalog/PKICatalog.yaml
@@ -1,11 +1,11 @@
 ---
-apiVersion: deckhand.airshipit.org/v1alpha1
-kind: DeckhandDataSchema
+schema: deckhand/DataSchema/v1
 metadata:
-  name: promenade/PKICatalog
+  schema: metadata/Control/v1
+  name: promenade/PKICatalog/v1
   labels:
     application: promenade
-spec:
+data:
   $schema: http://json-schema.org/schema#
   certificate_authorities:
     type: array
