--- a/airship-treasuremap/global/software/charts/kubernetes/ingress/ingress.yaml
+++ b/airship-treasuremap/global/software/charts/kubernetes/ingress/ingress.yaml
@@ -26,9 +26,9 @@ spec:
           release_group: airship-ingress-kube-system
         type: job
   values:
-    deployment:
-      mode: cluster
-      type: DaemonSet
+    #TODO(jeb) deployment:
+    #TODO(jeb)   mode: cluster
+    #TODO(jeb)   type: DaemonSet
     images:
       tags: $(PeglegSoftwareVersions.software-versions.spec.images.kubernetes.ingress)
     labels:
