--- a/airship-treasuremap/global/software/charts/ucp/core/rabbitmq.yaml
+++ b/airship-treasuremap/global/software/charts/ucp/core/rabbitmq.yaml
@@ -28,7 +28,7 @@ spec:
     endpoints:
       oslo_messaging:
         auth:
-          erlang_cookie: $(DeckhandPassphrase.ucp-rabbitmq-erlang-cookie.spec)
+          #TODO(jeb) erlang_cookie: $(DeckhandPassphrase.ucp-rabbitmq-erlang-cookie.spec)
           user:
             parent-inline: $(PeglegAccountCatalogue.ucp-service-accounts.spec.ucp.oslo_messaging.admin)
             password: $(DeckhandPassphrase.ucp-oslo-messaging-password.spec)
