--- a/airship-treasuremap/site/airship-seaworthy/software/charts/osh/openstack-tenant-ceph/ceph-client.yaml
+++ b/airship-treasuremap/site/airship-seaworthy/software/charts/osh/openstack-tenant-ceph/ceph-client.yaml
@@ -11,7 +11,7 @@ metadata:
     parentSelector:
       name: tenant-ceph-client
   name: tenant-ceph-client
-  namespace: osh
+  namespace: openstack
 spec:
   values:
     conf:
