--- a/airship-treasuremap/site/airship-seaworthy/software/charts/osh/openstack-tenant-ceph/ceph-osd.yaml
+++ b/airship-treasuremap/site/airship-seaworthy/software/charts/osh/openstack-tenant-ceph/ceph-osd.yaml
@@ -13,7 +13,7 @@ metadata:
     parentSelector:
       name: tenant-ceph-osd
   name: tenant-ceph-osd
-  namespace: osh
+  namespace: openstack
 spec:
   values:
     conf:
