--- a/airship-treasuremap/site/airskiff/profiles/region.yaml
+++ b/airship-treasuremap/site/airskiff/profiles/region.yaml
@@ -12,5 +12,5 @@ spec:
   - $(DeckhandPublicKey.airship-ssh-public-key.spec)
   repositories:
     main_archive: $(PeglegSoftwareVersions.software-versions.spec.packages.repositories.main_archive)
-    remove_unlisted: true
+    #TODO(jeb) remove_unlisted: true
   tag_definitions: []
