--- a/airship-treasuremap/site/airskiff/software/charts/osh/openstack-compute-kit/neutron-rabbitmq.yaml
+++ b/airship-treasuremap/site/airskiff/software/charts/osh/openstack-compute-kit/neutron-rabbitmq.yaml
@@ -14,7 +14,7 @@ metadata:
       component: neutron
       name: neutron-rabbitmq
   name: neutron-rabbitmq
-  namespace: osh
+  namespace: openstack
 spec:
   test:
     enabled: false
