--- a/airship-treasuremap/site/airskiff/software/charts/osh/openstack-compute-kit/nova.yaml
+++ b/airship-treasuremap/site/airskiff/software/charts/osh/openstack-compute-kit/nova.yaml
@@ -18,7 +18,7 @@ metadata:
       component: nova
       name: nova
   name: nova
-  namespace: osh
+  namespace: openstack
 spec:
   values:
     conf:
