--- a/airship-treasuremap/site/airskiff/software/config/endpoints.yaml
+++ b/airship-treasuremap/site/airskiff/software/config/endpoints.yaml
@@ -408,7 +408,7 @@ spec:
           public: 80
       scheme:
         default: http
-      type: null
+      #TODO(jeb) type: null
     compute:
       host_fqdn_override:
         default: ""
