--- a/airship-treasuremap/type/sloop/charts/osh/ceph/ceph-ingress.yaml
+++ b/airship-treasuremap/type/sloop/charts/osh/ceph/ceph-ingress.yaml
@@ -11,7 +11,7 @@ metadata:
     parentSelector:
       name: tenant-ceph-ingress
   name: tenant-ceph-ingress
-  namespace: osh
+  namespace: openstack
   replacement: true
 spec:
   values:
