--- a/airship-treasuremap/type/sloop/charts/osh/comps/nova.yaml
+++ b/airship-treasuremap/type/sloop/charts/osh/comps/nova.yaml
@@ -11,7 +11,7 @@ metadata:
     parentSelector:
       name: nova
   name: nova
-  namespace: osh
+  namespace: openstack
 spec:
   values:
     pod:
